@@ -2,6 +2,7 @@ Release Notes
 
 * 6/30/2016
   * added ignoreMissingInDS
+  * using bulk fetching for JEDI_DATASET_CONT_FILEID_SEQ
 
 * 6/28/2016
   * resetting transferType for pmerge
